css mobile fix to use height 100% instead of 100vh, see: https://stackoverflow.com/questions/37112218/css3-100vh-not-constant-in-mobile-browser/37113430#37113430

--- a/src/styles/app.scss
+++ b/src/styles/app.scss
@@ -1,5 +1,11 @@
+html, 
+body {
+    height: 100%;
+}
+
+#app,
 #root{
-    height:100vh;
+    height:100%;
 }
 
 .overflow-y-auto {
